# heeger_jepson

./: .gitignore  LICENSE  README.md  Readme.md  egomotion.ipynb  foe_libv2.py  motionfield.py  pyproject.toml  requirements.txt  test_egomotion.py
src/heeger_jepson/: foe_lib.py  foe_libv2.py
